--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -7,30 +7,29 @@
     tools:context=".RegisterUserActivity">
 
     <TextView
-        android:id="@+id/inici_sessio_textview"
+        android:id="@+id/register_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/registrarse"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/nom_textview"
+        android:id="@+id/name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:text="@string/nom"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inici_sessio_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/register_textview" />
 
     <EditText
-        android:id="@+id/nom_edit"
+        android:id="@+id/name_edit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -42,7 +41,7 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nom_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/name_textview" />
 
     <TextView
         android:id="@+id/email_textview"
@@ -50,10 +49,10 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:text="@string/email"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nom_edit" />
+        app:layout_constraintTop_toBottomOf="@+id/name_edit" />
 
     <EditText
         android:id="@+id/email_edit"
@@ -71,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/email_textview" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/enter_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
