--- a/app/src/main/res/layout/activity_shopping_item.xml
+++ b/app/src/main/res/layout/activity_shopping_item.xml
@@ -47,7 +47,7 @@
         android:text="Comprat"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/preuItem" />
+        app:layout_constraintTop_toBottomOf="@+id/detallItem" />
 
     <Button
         android:id="@+id/btn_save"
@@ -94,7 +94,7 @@
         android:layout_marginTop="32dp"
         android:text="Preu del producte:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detallItem" />
+        app:layout_constraintTop_toBottomOf="@+id/itemComprat" />
 
     <EditText
         android:id="@+id/preuItem"
