--- a/app/src/main/res/layout/layout_user.xml
+++ b/app/src/main/res/layout/layout_user.xml
@@ -8,13 +8,16 @@
 
     <TextView
         android:id="@+id/user_textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/down_button"
         app:layout_constraintStart_toEndOf="@+id/position_textView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.513"
