--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -11,40 +11,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/user_name"
+        app:layout_constraintBottom_toTopOf="@+id/debts_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:liststitem="@layout/layout_shopping" />
-
-    <TextView
-        android:id="@+id/user_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
-        android:onClick="openDebtActivity"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/task_btn"
-        app:layout_constraintEnd_toStartOf="@+id/user_debt"
-        app:layout_constraintStart_toStartOf="parent"
-        android:focusable="true" />
-
-    <TextView
-        android:id="@+id/user_debt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:onClick="openDebtActivity"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/task_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:focusable="true" />
 
     <Button
         android:id="@+id/task_btn"
@@ -54,6 +25,20 @@
         android:text="Go to TaskList"
         android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/debts_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Debts"
+        app:layout_constraintBottom_toTopOf="@+id/task_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
