--- a/app/src/main/res/menu/edit_task_menu.xml
+++ b/app/src/main/res/menu/edit_task_menu.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item
-    android:id="@+id/remove-task"
-    android:title="Remove task" />
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/remove-task"
+        android:icon="@drawable/ic_delete_black_24dp"
+        android:title="Remove task"
+        app:showAsAction="always"/>
 </menu>
