--- a/app/src/main/res/layout/layout_user.xml
+++ b/app/src/main/res/layout/layout_user.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.513"
         tools:text="User Name" />
 
-    <Button
+    <ImageButton
         android:id="@+id/up_button"
         android:layout_width="45dp"
         android:layout_height="48dp"
@@ -31,12 +31,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="U"
+        android:background="@color/colorPrimary"
+        android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/down_button"
         android:layout_width="45dp"
         android:layout_height="48dp"
@@ -44,7 +45,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="D"
+        android:background="@color/colorPrimary"
+        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/up_button"
         app:layout_constraintTop_toTopOf="parent"
