--- a/app/src/main/res/layout/activity_debt.xml
+++ b/app/src/main/res/layout/activity_debt.xml
@@ -31,7 +31,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorSecondary"
         android:text="Clear Debts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
