Retocs de disseny

--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -21,8 +21,8 @@
         android:id="@+id/task_btn"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="?attr/colorPrimary"
-        android:text="Go to TaskList"
+        android:background="@color/colorPrimary"
+        android:text="@string/GoToTaskList"
         android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,15 +30,15 @@
 
     <Button
         android:id="@+id/debts_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="277dp"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorSecondary"
-        android:text="Debts"
+        android:backgroundTint="@color/colorSecondary"
+        android:text="@string/Debts"
         app:layout_constraintBottom_toTopOf="@+id/task_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
