--- a/app/src/main/res/layout/activity_add_tenant.xml
+++ b/app/src/main/res/layout/activity_add_tenant.xml
@@ -10,9 +10,9 @@
         android:id="@+id/id_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
         android:text="ID d'usuari:"
         android:textColor="@android:color/black"
         android:textSize="18sp"
@@ -24,12 +24,12 @@
         android:id="@+id/id_edit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,6 +47,7 @@
         android:layout_marginRight="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/colorSecondary"
         android:text="Afegeix"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
