--- a/app/src/main/res/layout/activity_debt.xml
+++ b/app/src/main/res/layout/activity_debt.xml
@@ -8,13 +8,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/debts_recyclerView"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/clear_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,15 +19,15 @@
 
     <Button
         android:id="@+id/clear_button"
-        android:layout_width="143dp"
-        android:layout_height="wrap_content"
+        android:layout_width="156dp"
+        android:layout_height="59dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorSecondary"
-        android:text="Clear Debts"
+        android:backgroundTint="@color/colorSecondary"
+        android:text="Borrar deutes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
