--- a/app/src/main/res/layout/activity_flat.xml
+++ b/app/src/main/res/layout/activity_flat.xml
@@ -71,14 +71,15 @@
 
     <Button
         android:id="@+id/button_create"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="124dp"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/colorSecondary"
         android:text="CREA"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
