--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -21,7 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:background="@color/colorPrimary"
-        android:text="Go to ShoppingList"
+        android:text="@string/GoShoppingList"
         android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
